User login with token
